...
                                                isStatusMenuExpanded
                                        )
                                },
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .testTag(
                                        "reading_status_dropdown"
                                    )
                                    .menuAnchor(
                                        type =
                                            ExposedDropdownMenuAnchorType
                                                .PrimaryNotEditable,
                                        enabled = true
...
                                                isOwnershipMenuExpanded
                                        )
                                },
                                modifier = Modifier
                                    .fillMaxWidth()
                                    .testTag(
                                        "book_ownership_dropdown"
                                    )
                                    .menuAnchor(
                                        type =
                                            ExposedDropdownMenuAnchorType
                                                .PrimaryNotEditable,
                                        enabled = true
...
